fixup! fixup! fixup! fixup! fixup! zoom out on mobile

--- a/shkc/static/tass.css
+++ b/shkc/static/tass.css
@@ -630,6 +630,7 @@ input#startDate {
         padding: 5px !important
     }
     .tab_remark,
+    .tab_remark td,
     .tab_unit td {
         font-size: 12px !important
     }
